# beacon-ai

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
bindings/node/: Cargo.toml  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  beacon_ai.pyi  pyproject.toml
bindings/python/src/: lib.rs
crates/beacon-arrow/: Cargo.toml
crates/beacon-arrow/src/: lib.rs
crates/beacon-cli/: Cargo.toml
crates/beacon-cli/src/: main.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/src/: backend.rs  cpu_backend.rs  dequant.rs  engine.rs  error.rs  kv_cache.rs  lib.rs  mlx_backend.rs  tests.rs  weights.rs
crates/beacon-cuda/: Cargo.toml
crates/beacon-cuda/src/: lib.rs
crates/beacon-format/: Cargo.toml
crates/beacon-format/src/: config.rs  convert.rs  dequant.rs  dtype.rs  error.rs  lib.rs  tensor_meta.rs  tests.rs
crates/beacon-format/src/beacon/: mod.rs  reader.rs  writer.rs
crates/beacon-format/src/gguf/: config_map.rs  header.rs  metadata.rs  mod.rs  tensor_info.rs  types.rs
crates/beacon-kernels/: Cargo.toml
crates/beacon-kernels/benches/: kernels.rs
crates/beacon-kernels/src/: dispatch.rs  lib.rs  neon.rs  ops.rs  q4.rs  tests.rs
crates/beacon-mlx/: Cargo.toml  build.rs
crates/beacon-mlx/src/: context.rs  dtype.rs  error.rs  lib.rs  ops.rs  stream.rs  tensor.rs  tests.rs
crates/beacon-registry/: Cargo.toml
crates/beacon-registry/src/: download.rs  error.rs  lib.rs  models.rs
crates/beacon-scheduler/: Cargo.toml
crates/beacon-scheduler/src/: error.rs  generate.rs  lib.rs  params.rs  sampling.rs  tests.rs
crates/beacon-tokenizer/: Cargo.toml
crates/beacon-tokenizer/src/: chat.rs  error.rs  lib.rs  tests.rs  tokenizer.rs
docs/: BUILD_STATUS.md  architecture.md  performance.md
scripts/: benchmark.sh  check-shim-lines.sh
server/beacon-server/: Cargo.toml
server/beacon-server/src/: lib.rs  main.rs  routes.rs  types.rs
shim/: CMakeLists.txt
shim/include/: beacon_shim.h
shim/metal/: q4_dequant_mul.metal
shim/src/: beacon_shim.cpp  errors.cpp  guard.h  internal.h  kernels.cpp  ops.cpp  tensor.cpp
shim/tests/: CMakeLists.txt  smoke.c
tests/eval/: README.md
