[package]
name = "beacon-cli"
description = "Beacon command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
beacon-core = { path = "../beacon-core" }
beacon-format = { path = "../beacon-format" }
beacon-mlx = { path = "../beacon-mlx" }
beacon-tokenizer = { path = "../beacon-tokenizer" }
beacon-scheduler = { path = "../beacon-scheduler" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.9"

[lints]
workspace = true
