[package]
name = "beacon-core"
description = "Beacon engine orchestration and model loading."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
