[package]
name = "beacon-kernels"
description = "CPU SIMD kernels for the Beacon CPU backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
