[package]
name = "beacon-mlx"
description = "Rust FFI bindings to the Beacon MLX shim (C++ layer)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
