[package]
name = "beacon-scheduler"
description = "Batching, streaming, KV cache, and sampling."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
rand = "0.9"
