[package]
name = "beacon-tokenizer"
description = "BPE tokenizer with chat template support."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
