[package]
name = "beacon-tokenizer"
description = "BPE tokenizer with chat template support."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
minijinja = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
