[package]
name = "beacon-server"
description = "Ollama-compatible HTTP server for Beacon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "beacon-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
dirs = "6"
