[package]
name = "beacon-server"
description = "Ollama-compatible HTTP server for Beacon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "beacon-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
dirs = "6"
beacon-core = { path = "../../crates/beacon-core" }
beacon-mlx = { path = "../../crates/beacon-mlx" }
beacon-format = { path = "../../crates/beacon-format" }
beacon-tokenizer = { path = "../../crates/beacon-tokenizer" }
beacon-scheduler = { path = "../../crates/beacon-scheduler" }
memmap2 = "0.9"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
